minor step forward

--- a/src/Manopulator/hosts/ConsoleFramework/ConsoleFramework.csproj
+++ b/src/Manopulator/hosts/ConsoleFramework/ConsoleFramework.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RobotCommand.cs" />
+    <Compile Include="Manipulator\RobotCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
