Makings of controller

--- a/src/Manopulator/hosts/ConsoleFramework/ConsoleFramework.csproj
+++ b/src/Manopulator/hosts/ConsoleFramework/ConsoleFramework.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manipulator\Controller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Manipulator\RobotCommand.cs" />
