--- a/src/Manipulator/hosts/ConsoleFramework/ConsoleFramework.csproj
+++ b/src/Manipulator/hosts/ConsoleFramework/ConsoleFramework.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Manipulator\RobotCommand.cs" />
+    <Compile Include="Utils\Quadrilateral.cs" />
+    <Compile Include="Utils\Checks.cs" />
+    <Compile Include="Utils\Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
