--- a/src/Manipulator/hosts/ConsoleFramework/ConsoleFramework.csproj
+++ b/src/Manipulator/hosts/ConsoleFramework/ConsoleFramework.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manipulator\Controller.cs" />
+    <Compile Include="Native\Arm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Manipulator\RobotCommand.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Utils\Quadrilateral.cs" />
     <Compile Include="Utils\Checks.cs" />
     <Compile Include="Utils\Triangle.cs" />
+    <Compile Include="Utils\Vector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
