--- a/src/Manipulator/hosts/ConsoleFramework/ConsoleFramework.csproj
+++ b/src/Manipulator/hosts/ConsoleFramework/ConsoleFramework.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Manipulator\RobotCommand.cs" />
+    <Compile Include="Utils\Angle.cs" />
     <Compile Include="Utils\Converter.cs" />
     <Compile Include="Utils\Quadrilateral.cs" />
     <Compile Include="Utils\Checks.cs" />
